# language-flashCards-web-app

./: flashcards.json  main.py  pyproject.toml
